--- a/index.html
+++ b/index.html
@@ -318,6 +318,17 @@
                     Adobe XD.</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5> 02<sup>nd</sup> Oct 2021 - Present</h5>
+              <p><em>Avista Technology Solutions Pvt Ltd., Mumbai</em></p>
+              <ul>
+                <li>Work as a Full Stack Developer.</li>
+                <li>Technology use .NET and C# and SQL server.</li>
+                <li>Tools: Microsoft Visual studio 2019 and SSMS(SQL Server
+                Management studio).</li>
+              </ul>
+            </div>
 
             <h3 class="resume-title">Languages</h3>
             <div class="resume-item">
@@ -341,7 +352,7 @@
               <h4>Master of Computer Applications</h4>
               <h5>2018 - 2021</h5>
               <p><em>University of Mumbai</em></p>
-              <p> I have completed my Masters degree from <strong>VIVA School of MCA(Virar) </strong> and I have secured 66.88% score till 5<sup>th</sup> sem.</p>
+              <p> I have completed my Masters degree from <strong>VIVA School of MCA(Virar) </strong> and I have secured 66.88% score.</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of science in information technology</h4>
