--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <img src="assets/img/IMG-20240106-WA0008.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ankit Kadam</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/Ankit-kadam24" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://twitter.com/Ankit_Kadam24?s=08" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/ankit.kadam.7587/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/_mr.kadam_/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/Ankit-kadam24" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com/Ankit_Kadam24?s=08" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/ankit.kadam.7587/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/er.ankitsitaramkadam/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="https://join.skype.com/invite/yRnoxTH7mxvd" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-          <a href="https://www.linkedin.com/in/ankit-kadam-61442115a/" class="linkedin"><i
+          <a href="https://www.linkedin.com/in/ankit-kadam-61442115a/" class="linkedin" target="_blank"><i
               class="bx bxl-linkedin"></i></a>
 
         </div>
@@ -127,7 +127,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 26 March 1997</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a
-                      href="https://ankit-kadam24.github.io/My-Portfolio/">My-Portfolio</a> </li>
+                      href="https://ankit-kadam24.github.io/My-Portfolio/" target="_blank">My-Portfolio</a> </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 9284906112</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mumbai, India</li>
                 </ul>
@@ -224,13 +224,7 @@
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Angular <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
+            
 
             <div class="progress">
               <span class="skill">node js <i class="val">50%</i></span>
@@ -240,12 +234,27 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">WordPress <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Ionic Framework <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Angular <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -269,15 +278,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Ionic Framework <i class="val">80%</i></span>
+              <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
