--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <p><em>Azentio Software Pvt. Ltd., Mumbai</em></p>
               <ul>
                 <li>Working as hybrid application developer using Ionic framework
-                  & Angular 7+</li>
+                  & Angular 7+.</li>
                 <li>Development of new modules is my key role here.</li>
                 <li>Working on API Integrations, API testing using Postman and
                   API Authenticating using tokens.
@@ -414,8 +414,8 @@
               <p><em>Avista Technology Solutions Pvt Ltd., Mumbai</em></p>
               <ul>
                 <li>Work as a Full Stack Developer.</li>
-                <li>Using Jira Software as a bug and issue tracker</li>
-                <li>Technology use .NET and C# and SQL server</li>
+                <li>Using Jira Software as a bug and issue tracker.</li>
+                <li>Technology use .NET and C# and SQL server.</li>
                 <li>Tools: Microsoft Visual studio 2019 and SSMS(SQL Server
                   Management studio).</li>
                 <li>Daily progress calls to track progress.</li>
@@ -476,14 +476,14 @@
                 </li>
                 <li>My role here to work on front end using Ionic framework and Angular.
                 </li>
-                <li>UI prototype design using Figma tool</li>
+                <li>UI prototype design using Figma tool.</li>
                 <li>We added one unique featured in app like "Trust score" allowed users
                   to add more profs like bank statements, salary slips and driving license
                   etc. With help of documents we provide Trust score in percentage. For
                   documents verification process we created one admin panel also that
                   verify documents manually.
                 </li>
-                <li>showing Active users status.</li>
+                <li>Showing Active users status.</li>
               </ul>
             </div>
 
@@ -575,15 +575,19 @@
               </div>
 
               <div class="email">
+                <a href="mailto:ankitkadam1997@gmail.com">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p>ankitkadam1997@gmail.com</p>
+                </a>
               </div>
 
               <div class="phone">
+                <a href="tel:+919284906112">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
                 <p>+91 9284906112</p>
+                </a>
               </div>
               <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.7007448214736!2d72.82503801470263!3d19.425331745947194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7a9d88b47ab0b%3A0xc8d1db6adacee96e!2sJain%20niwas%20apartment!5e0!3m2!1sen!2sin!4v1626241309491!5m2!1sen!2sin"
