--- a/index.html
+++ b/index.html
@@ -568,10 +568,12 @@
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
+                <a href="https://maps.app.goo.gl/ujySDZPH3Wvn8v1R8" target="_blank">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>B-26, Om Shruti CHSL,B wing, Second floor,Sainath Nagar, Tulinj Road<br>
+                <p>B-26, Om Shruti CHSL,B wing, Second floor,Sainath Nagar, Tulinj Road,<br>
                   Nallasopara (E), Maharashtra, 401209</p>
+                </a>
               </div>
 
               <div class="email">
