--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -2,9 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Ankit Kadam-Biodata</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="../assets/img/fevicon_new2-modified.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
     <link rel="stylesheet" href="style.css"> <!-- You can create a separate CSS file and link it here -->
     <script src="script.js"></script>
 </head>
@@ -16,7 +24,7 @@
             <span class="slider round" id="checkboxText"></span>
             <!-- <span >Off</span> -->
         </label>
-        <img id="profilePhoto" src="/assets//img/IMG-20240106-WA0008.png" alt="Profile Photo">
+        <img id="profilePhoto" src="../assets//img/IMG-20240106-WA0008.png" alt="Profile Photo">
         <h1 data-translation-key="name"></h1>
         <h3>Software Engineer</h3>
     </header>
