Update Spelling changes

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <ul>
                 <li>Mumbai, Maharashtra</li>
                 <li>+91 9284906112</li>
-                <li>ankitkadam1997@gmial.com</li>
+                <li>ankitkadam1997@gmail.com</li>
               </ul>
             </div>
 
