--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -39,6 +39,35 @@
             <!-- <span >Off</span> -->
         </label>
         <img id="profilePhoto" src="../assets/img/IMG-20240106-WA0008.png" alt="Profile Photo" onclick="showLargerPhoto()" title="Click to view">
+        <!-- <div class="profile-container">
+            <img id="profilePhoto" src="../assets/img/IMG-20240106-WA0008.png" alt="Profile Photo" onclick="showLargerPhoto()" title="Click to view">
+            <div class="social-media-icons">
+              <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                <i class="icofont-facebook"></i>
+              </a>
+              <a href="https://www.twitter.com/" target="_blank" title="Twitter">
+                <i class="icofont-twitter"></i>
+              </a>
+              <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+                <i class="icofont-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/" target="_blank" title="LinkedIn">
+                <i class="icofont-linkedin"></i>
+              </a>
+            </div>
+          </div> -->
+
+          <!-- <div class="profile-container" onclick="showLargerPhoto()" title="Click to view">
+            <img id="profilePhoto" src="../assets/img/IMG-20240106-WA0008.png" alt="Profile Photo" >
+            <div class="profile-icons">
+                <a href="https://facebook.com" target="_blank"><i class="icofont-brand-whatsapp"></i></a>
+                <a href="https://facebook.com" target="_blank"><i class="icofont-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank"><i class="icofont-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="icofont-instagram"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="icofont-linkedin"></i></a>
+            </div>
+        </div> -->
+        
         <h1 data-translation-key="name"></h1>
         <h3 data-translation-key="designation"></h3>
 
@@ -143,13 +172,23 @@
             <!-- <th data-translation-key=""></th> -->
             <td data-translation-key="relativeNameThree"></td>
         </tr>
+        
+        <tr>
+            <th data-translation-key="designationlbl"></th>
+            <td data-translation-key="designationdtl"></td>
+        </tr>
+        <tr>
+            <th data-translation-key="salarylbl"></th>
+            <td data-translation-key="salarydtl"></td>
+        </tr>
+
         <tr>
             <th data-translation-key="labelRelations"></th>
             <td data-translation-key="relations"></td>
         </tr>
         <tr>
             <th data-translation-key="labelMobileNo"></th>
-            <td data-translation-key="mobileNo" onclick="redirectToDialPad('123456789')"></td>
+            <td data-translation-key="mobileNo" onclick="redirectToDialPad('9833965415')"></td>
         </tr>
     </table>
     </div>
