Salary Proof Added

--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -190,9 +190,19 @@
             <th data-translation-key="labelMobileNo"></th>
             <td data-translation-key="mobileNo" onclick="redirectToDialPad('9833965415')"></td>
         </tr>
+        <tr>
+            <th data-translation-key="labelSalarySlip"></th>
+            <td>
+                <a href="https://drive.google.com/file/d/13b8cYcBCH6H7VwU7d4uKiO3omZPPEz4a/view?usp=sharing" target="_blank">Oct-2024</a>, 
+                <a href="http://" target="_blank">Nov-2024</a>,
+                <a href="http://" target="_blank">Dec-2024</a>
+            </td>
+        </tr>
     </table>
     </div>
 
+
+    <!-- <embed src="../assets/Ankit's Resume.pdf" width="100px" height="100px" /> -->
     <!-- <button id="translateBtn" onclick="translateToMarathi()">Translate to Marathi</button> -->
 
     <!-- <div id="pdfLinks">
