biodata Sister name and flat dtls changes

--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -121,8 +121,16 @@
             <td data-translation-key="village" id="locationKadoli"></td>
         </tr>
         <tr>
-            <th data-translation-key="labelAddress"></th>
+            <th data-translation-key="labelVillageProprty"></th>
+            <td data-translation-key="villageProperty" id="locationKadoliproperty"></td>
+        </tr>
+        <tr>
+            <th rowspan="2" data-translation-key="labelAddress"></th>
             <td data-translation-key="address" id="locationCity"></td>
+        </tr>
+        <tr>
+            <!-- <th data-translation-key="labelAddress2"></th> -->
+            <td data-translation-key="address2" id="locationCity2"></td>
         </tr>
         <tr>
             <th data-translation-key="labelEdu"></th>
@@ -161,17 +169,17 @@
             <td data-translation-key="sisterThree"></td>
         </tr>
         <tr>
-            <th rowspan="3" data-translation-key="labelRelativesName"></th>
+            <th data-translation-key="labelRelativesName"></th>
             <td data-translation-key="relativeNameOne"></td>
         </tr>
-        <tr>
-            <!-- <th data-translation-key=""></th> -->
+        <!-- <tr>
+            <th data-translation-key=""></th>
             <td data-translation-key="relativeNameTwo"></td>
-        </tr>
-        <tr>
-            <!-- <th data-translation-key=""></th> -->
+        </tr> -->
+        <!-- <tr>
+            <th data-translation-key=""></th>
             <td data-translation-key="relativeNameThree"></td>
-        </tr>
+        </tr> -->
         
         <tr>
             <th data-translation-key="designationlbl"></th>
@@ -190,14 +198,14 @@
             <th data-translation-key="labelMobileNo"></th>
             <td data-translation-key="mobileNo" onclick="redirectToDialPad('9833965415')"></td>
         </tr>
-        <tr>
+        <!-- <tr>
             <th data-translation-key="labelSalarySlip"></th>
             <td>
                 <a href="https://drive.google.com/file/d/13b8cYcBCH6H7VwU7d4uKiO3omZPPEz4a/view?usp=sharing" target="_blank">Oct-2024</a>, 
                 <a href="http://" target="_blank">Nov-2024</a>,
                 <a href="http://" target="_blank">Dec-2024</a>
             </td>
-        </tr>
+        </tr> -->
     </table>
     </div>
 
